# pdm-python-lambda-boilerplate

./: .gitignore  Makefile  README.md  pyproject.toml
